# Kazib

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: Deploy.yaml
crates/annas-archive-api/: CHANGELOG.md  Cargo.toml
crates/annas-archive-api/src/: client.rs  dtos.rs  error.rs  lib.rs  scraper.rs  types.rs
crates/kazib/: .gitignore  Cargo.toml  Dioxus.toml
crates/kazib/assets/: main.css
crates/kazib/src/: db.rs  main.rs  model.rs  path_template.rs
crates/kazib/src/server/: db.rs  errors.rs  mod.rs  path_template.rs
crates/kazib/src/views/: admin.rs  book.rs  download.rs  history.rs  mod.rs  search.rs
