[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2024"

[workspace.dependencies]
annas-archive-api = { path = "crates/annas-archive-api" }

dioxus = { version = "0.7.4", features = ["router", "fullstack"] }
tokio = { version = "1.0", features = ["rt", "macros", "fs", "io-util"] }
reqwest = { version = "0.13" }
redb = "2.3"

thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.25.0"

urlencoding = "2.1"
nom = "8.0"
futures-util = { version = "0.3" }
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
