[package]
name = "kazib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus.workspace = true
annas-archive-api.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
nom.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
futures-util = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["stream"], optional = true }
dirs.workspace = true
chrono = { workspace = true, optional = true }
axum = { version = "0.8", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "annas-archive-api/server", "dep:tokio", "dep:futures-util", "dep:reqwest", "dep:chrono", "dep:axum"]
